수정, 삭제는 연결했는데(별점부분은 해결못함)
숙소별 리뷰목록 화면은 구성했는데 각 숙소상세페이지랑 연결 못함

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1037,6 +1037,16 @@ button {
     align-items: flex-end;
 }
 
+.hotelReviewSection {
+    display: flex;
+    gap : 1em;
+    align-items: center;
+    padding: 1em;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
 /* 결제 페이지 */
 .paymentBody {
     background-color: #f5f5f5;
