--- a/src/main/resources/templates/review/UserReviewDetail.html
+++ b/src/main/resources/templates/review/UserReviewDetail.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <script src=/js/bootstrap.bundle.js></script>
+    <script src="/js/bootstrap.bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
@@ -26,89 +26,76 @@
             <div class="reviewWrite">
                 <label for="reviewTitle">숙소명</label>
                 <div class="reviewInput">
-                    <input class="Score BoxBorderNon" type="text" id="reviewTitle" name="roomTitle" readonly th:text="${review.reservation.getRoomTitle()}">
+                    <input class="Score BoxBorderNon" type="text" id="reviewTitle" name="roomTitle" readonly th:value="${review.reservation.getRoomTitle()}">
                 </div>
             </div>
             <div class="reviewWrite mt-4">
                 <div class="row">
                     <form action="/SleepOn/updateReview" method="post" id="content">
                         <input name="id" th:value="${review.getIdx()}" type="hidden">
-                        <div class="col-sm-4">
-                            <label for="reviewTitle">별점</label>
-                            <div class="row">
-                                <div class="col-sm-9 mx-auto">
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">위치</span>
-                                        <div class="row d-flex justify-content-between location-stars" data-score="${initialLocationScore}">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewLocationNum" value="0">
-                                            </div>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label for="reviewTitle">별점</label>
+                                <div class="row">
+                                    <div class="col-sm-9 mx-auto">
+                                        <div class="px-3 my-3 d-flex justify-content-between">
+                                            <span class="fw-bold align-content-center">위치</span>
+                                            <select class="form-control" id="reviewLocationNum" name="reviewLocationNum" th:value="${review.reviewLocationNum}">
+                                                <option th:value="1" th:selected="${review.reviewLocationNum == 1}">⭐</option>
+                                                <option th:value="2" th:selected="${review.reviewLocationNum == 2}">⭐⭐</option>
+                                                <option th:value="3" th:selected="${review.reviewLocationNum == 3}">⭐⭐⭐</option>
+                                                <option th:value="4" th:selected="${review.reviewLocationNum == 4}">⭐⭐⭐⭐</option>
+                                                <option th:value="5" th:selected="${review.reviewLocationNum == 5}">⭐⭐⭐⭐⭐</option>
+                                            </select>
                                         </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">체크인</span>
-                                        <div class="row d-flex justify-content-between checkin-stars" data-score="${initialCheckinScore}">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewCheckinNum" value="0">
-                                            </div>
+                                        <div class="px-3 my-3 d-flex justify-content-between">
+                                            <span class="fw-bold align-content-center">체크인</span>
+                                            <select class="form-control" id="reviewCheckinNum" name="reviewCheckinNum" th:value="${review.reviewCheckinNum}">
+                                                <option th:value="1" th:selected="${review.reviewCheckinNum == 1}">⭐</option>
+                                                <option th:value="2" th:selected="${review.reviewCheckinNum == 2}">⭐⭐</option>
+                                                <option th:value="3" th:selected="${review.reviewCheckinNum == 3}">⭐⭐⭐</option>
+                                                <option th:value="4" th:selected="${review.reviewCheckinNum == 4}">⭐⭐⭐⭐</option>
+                                                <option th:value="5" th:selected="${review.reviewCheckinNum == 5}">⭐⭐⭐⭐⭐</option>
+                                            </select>
                                         </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">의사소통</span>
-                                        <div class="row d-flex justify-content-between communication-stars" data-score="${initialCommunicationScore}">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewCommunicationNum" value="0">
-                                            </div>
+                                        <div class="px-3 my-3 d-flex justify-content-between">
+                                            <span class="fw-bold align-content-center">의사소통</span>
+                                            <select class="form-control" id="reviewCommunicationNum" name="reviewCommunicationNum" th:value="${review.reviewCommunicationNum}">
+                                                <option th:value="1" th:selected="${review.reviewCommunicationNum == 1}">⭐</option>
+                                                <option th:value="2" th:selected="${review.reviewCommunicationNum == 2}">⭐⭐</option>
+                                                <option th:value="3" th:selected="${review.reviewCommunicationNum == 3}">⭐⭐⭐</option>
+                                                <option th:value="4" th:selected="${review.reviewCommunicationNum == 4}">⭐⭐⭐⭐</option>
+                                                <option th:value="5" th:selected="${review.reviewCommunicationNum == 5}">⭐⭐⭐⭐⭐</option>
+                                            </select>
                                         </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">청결도</span>
-                                        <div class="row d-flex justify-content-between cleanliness-stars" data-score="${initialCleanlinessScore}">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewCleanlinessNum" value="0">
-                                            </div>
+                                        <div class="px-3 my-3 d-flex justify-content-between">
+                                            <span class="fw-bold align-content-center">청결도</span>
+                                            <select class="form-control" id="reviewCleanlinessNum" name="reviewCleanlinessNum" th:value="${review.reviewCleanlinessNum}">
+                                                <option th:value="1" th:selected="${review.reviewCleanlinessNum == 1}">⭐</option>
+                                                <option th:value="2" th:selected="${review.reviewCleanlinessNum == 2}">⭐⭐</option>
+                                                <option th:value="3" th:selected="${review.reviewCleanlinessNum == 3}">⭐⭐⭐</option>
+                                                <option th:value="4" th:selected="${review.reviewCleanlinessNum == 4}">⭐⭐⭐⭐</option>
+                                                <option th:value="5" th:selected="${review.reviewCleanlinessNum == 5}">⭐⭐⭐⭐⭐</option>
+                                            </select>
                                         </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">만족도</span>
-                                        <div class="row d-flex justify-content-between satisfaction-stars" data-score="${initialSatisfactionsScore}">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewSatisfactionNum" value="0">
-                                            </div>
+                                        <div class="px-3 my-3 d-flex justify-content-between">
+                                            <span class="fw-bold align-content-center">만족도</span>
+                                            <select class="form-control" id="reviewSatisfactionNum" name="reviewSatisfactionNum" th:value="${review.reviewSatisfactionNum}">
+                                                <option th:value="1" th:selected="${review.reviewSatisfactionNum == 1}">⭐</option>
+                                                <option th:value="2" th:selected="${review.reviewSatisfactionNum == 2}">⭐⭐</option>
+                                                <option th:value="3" th:selected="${review.reviewSatisfactionNum == 3}">⭐⭐⭐</option>
+                                                <option th:value="4" th:selected="${review.reviewSatisfactionNum == 4}">⭐⭐⭐⭐</option>
+                                                <option th:value="5" th:selected="${review.reviewSatisfactionNum == 5}">⭐⭐⭐⭐⭐</option>
+                                            </select>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-8">
-                            <label for="reviewText">리뷰 내용</label>
-                            <div class="mt-3 me-3">
-                                <textarea class="form-control review-textarea" id="reviewText" name="reviewText" rows="4" required style="height: 300px;" th:text="${review.getReviewText()}"></textarea>
+                            <div class="col-sm-8">
+                                <label for="reviewText">리뷰 내용</label>
+                                <div class="mt-3 me-3">
+                                    <textarea class="form-control review-textarea" id="reviewText" name="reviewText" rows="4" required style="height: 300px;" th:text="${review.getReviewText()}"></textarea>
+                                </div>
                             </div>
                         </div>
                         <input type="hidden" name="contentId" th:value="${review.reservation.getContentId()}">
@@ -155,73 +142,6 @@
         // 맨 아래로 스크롤
         $('#scrollToBottom').click(function () {
             $('html, body').animate({scrollTop: $(document).height() - $(window).height()}, 300); // 속도를 300 밀리초로 설정
-        });
-
-        let reviewData = {
-            reviewLocationNum: 0,
-            reviewCheckinNum: 0,
-            reviewCommunicationNum: 0,
-            reviewCleanlinessNum: 0,
-            reviewSatisfactionNum: 0,
-            reviewText: '',
-            contentId: '숙소번호',
-            reservId: ''
-        };
-
-        function setStarNum(starContainer, reviewKey) {
-            const initialScore = $(starContainer).data('score');
-            if (initialScore) {
-                $(starContainer).find('.bi-star').slice(0, initialScore).removeClass('bi-star').addClass('bi-star-fill');
-                reviewData[reviewKey] = initialScore;
-            }
-
-            $(starContainer).find('.bi-star, .bi-star-fill').on('click', function () {
-                let index = $(this).index() + 1;
-                // 모든 별의 상태를 초기화
-                $(starContainer).find('.bi-star, .bi-star-fill').removeClass('bi-star-fill').addClass('bi-star');
-                // 클릭된 별까지 채우기
-                $(starContainer).find('.bi-star').slice(0, index).removeClass('bi-star').addClass('bi-star-fill');
-                reviewData[reviewKey] = index;
-            });
-        }
-
-        setStarNum('.location-stars', 'reviewLocationNum');
-        setStarNum('.checkin-stars', 'reviewCheckinNum');
-        setStarNum('.communication-stars', 'reviewCommunicationNum');
-        setStarNum('.cleanliness-stars', 'reviewCleanlinessNum');
-        setStarNum('.satisfaction-stars', 'reviewSatisfactionNum');
-
-        function isAllStarRatingProvided() {
-            return reviewData.reviewLocationNum > 0 &&
-                reviewData.reviewCheckinNum > 0 &&
-                reviewData.reviewCommunicationNum > 0 &&
-                reviewData.reviewCleanlinessNum > 0 &&
-                reviewData.reviewSatisfactionNum > 0;
-        }
-
-        // 서버에서 초기 데이터를 받아와서 초기화
-        function initializeReviewData(initialData) {
-            $('.location-stars').data('score', initialData.reviewLocationNum);
-            $('.checkin-stars').data('score', initialData.reviewCheckinNum);
-            $('.communication-stars').data('score', initialData.reviewCommunicationNum);
-            $('.cleanliness-stars').data('score', initialData.reviewCleanlinessNum);
-            $('.satisfaction-stars').data('score', initialData.reviewSatisfactionNum);
-            $('#reviewText').val(initialData.reviewText);
-
-            // 초기 별점 설정
-            setStarNum('.location-stars', 'reviewLocationNum');
-            setStarNum('.checkin-stars', 'reviewCheckinNum');
-            setStarNum('.communication-stars', 'reviewCommunicationNum');
-            setStarNum('.cleanliness-stars', 'reviewCleanlinessNum');
-            setStarNum('.satisfaction-stars', 'reviewSatisfactionNum');
-        }
-
-        // 폼 제출 이벤트 핸들러
-        $('#update-review').on('submit', function () {
-            if (!isAllStarRatingProvided()) {
-                alert('모든 항목에 별점을 선택해주세요.');
-                event.preventDefault(); // 폼 제출 방지
-            }
         });
     });
 </script>
