--- a/src/main/resources/templates/review/UserReviewWrite.html
+++ b/src/main/resources/templates/review/UserReviewWrite.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <script src=/js/bootstrap.bundle.js></script>
+    <script src="/js/bootstrap.bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
 <header th:replace="~{layout/header :: header-banner}"></header>
 <main>
     <section class="container my-3">
-        <div class="reviewTitle">
+        <div class="inquiryTitle">
             <i class="fa-regular fa-comment-dots"></i>
             <span class="Score">리뷰 작성</span>
         </div>
@@ -24,98 +25,88 @@
     <section class="container my-3">
         <form action="/SleepOn/SubmitReview" method="post">
             <div class="profileCard">
-                <div class="reviewWrite">
-                    <label for="reviewTitle">숙소명</label>
-                    <div class="reviewInput">
-                        <input class="Score BoxBorderNon" type="text" id="reviewTitle" name="roomTitle" readonly th:text="${reservation.getRoomTitle()}">
-                    </div>
+                <div class="reviewTitle">
+                    <span id="reviewTitle" name="roomTitle" th:text="${reservation.getRoomTitle()}"></span>
                 </div>
-                <div class="reviewWrite mt-4">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <label for="reviewTitle">별점</label>
-                            <div class="row">
-                                <div class="col-sm-9 mx-auto">
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">위치</span>
-                                        <div class="row d-flex justify-content-between location-stars">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewLocationNum" value="0">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">체크인</span>
-                                        <div class="row d-flex justify-content-between checkin-stars">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewCheckinNum" value="0">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">의사소통</span>
-                                        <div class="row d-flex justify-content-between communication-stars">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewCommunicationNum" value="0">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">청결도</span>
-                                        <div class="row d-flex justify-content-between cleanliness-stars">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewCleanlinessNum" value="0">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="px-3 my-3 d-flex justify-content-between">
-                                        <span class="fw-bold align-content-center">만족도</span>
-                                        <div class="row d-flex justify-content-between satisfaction-stars">
-                                            <div class="col-sm">
-                                                <span class="bi-star" style="font-size: 30px;" data-value="1"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="2"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="3"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="4"></span>
-                                                <span class="bi-star" style="font-size: 30px;" data-value="5"></span>
-                                                <input type="hidden" name="reviewSatisfactionNum" value="0">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                <div class="reviewStarGrid">
+                    <div class="reviewGrid">
+                        <div class="reviewText">
+                            <span class="Score">위치</span>
                         </div>
-                        <div class="col-sm-8">
-                            <label for="reviewText">리뷰 내용</label>
-                            <div class="mt-3 me-3">
-                                <textarea class="form-control review-textarea" id="reviewText" name="reviewText" rows="4" required style="height: 300px;"></textarea>
-                            </div>
+                        <div class="reviewInput">
+                            <select class="BoxBorderNon" id="reviewLocationNum" name="reviewLocationNum">
+                                <option value="1" selected>⭐</option>
+                                <option value="2">⭐⭐</option>
+                                <option value="3">⭐⭐⭐</option>
+                                <option value="4">⭐⭐⭐⭐</option>
+                                <option value="5">⭐⭐⭐⭐⭐</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="reviewGrid">
+                        <div class="reviewText">
+                            <span class="Score">체크인</span>
+                        </div>
+                        <div class="reviewInput">
+                            <select class="BoxBorderNon" id="reviewCheckinNum" name="reviewCheckinNum">
+                                <option value="1" selected>⭐</option>
+                                <option value="2">⭐⭐</option>
+                                <option value="3">⭐⭐⭐</option>
+                                <option value="4">⭐⭐⭐⭐</option>
+                                <option value="5">⭐⭐⭐⭐⭐</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="reviewGrid">
+                        <div class="reviewText">
+                            <span class="Score">의사소통</span>
+                        </div>
+                        <div class="reviewInput">
+                            <select class="BoxBorderNon" id="reviewCommunicationNum" name="reviewCommunicationNum">
+                                <option value="1" selected>⭐</option>
+                                <option value="2">⭐⭐</option>
+                                <option value="3">⭐⭐⭐</option>
+                                <option value="4">⭐⭐⭐⭐</option>
+                                <option value="5">⭐⭐⭐⭐⭐</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="reviewGrid">
+                        <div class="reviewText">
+                            <span class="Score">청결도</span>
+                        </div>
+                        <div class="reviewInput">
+                            <select class="BoxBorderNon" id="reviewCleanlinessNum" name="reviewCleanlinessNum">
+                                <option value="1" selected>⭐</option>
+                                <option value="2">⭐⭐</option>
+                                <option value="3">⭐⭐⭐</option>
+                                <option value="4">⭐⭐⭐⭐</option>
+                                <option value="5">⭐⭐⭐⭐⭐</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="reviewGrid">
+                        <div class="reviewText">
+                            <span class="Score">만족도</span>
+                        </div>
+                        <div class="reviewInput">
+                            <select class="BoxBorderNon" id="reviewSatisfactionNum" name="reviewSatisfactionNum">
+                                <option value="1" selected>⭐</option>
+                                <option value="2">⭐⭐</option>
+                                <option value="3">⭐⭐⭐</option>
+                                <option value="4">⭐⭐⭐⭐</option>
+                                <option value="5">⭐⭐⭐⭐⭐</option>
+                            </select>
                         </div>
                     </div>
                 </div>
-                <div class="reviewWrite mt-5">
-                    <div class="reviewBtn">
+                <div class="mt-3 me-3">
+                    <textarea class="form-control review-textarea" id="reviewText" name="reviewText" rows="4" required style="height: 300px;"></textarea>
+                </div>
+                <div class="mt-5">
+                    <div class="inquiryBtn">
                         <button type="button" class="BackBtn" id="back-btn">뒤로가기</button>
-                        <button type="submit" class="BackBlueBtn" id="write-btn">리뷰 작성</button>
+                        <button type="submit" class="BackRedBtn" id="write-btn">리뷰 작성</button>
                     </div>
                 </div>
                 <input type="hidden" name="contentId" th:value="${reservation.getContentId()}">
@@ -123,7 +114,6 @@
             </div>
         </form>
     </section>
-
 
     <!-- 스크롤 버튼 -->
     <div id="scrollButtons">
@@ -153,49 +143,6 @@
             $('html, body').animate({scrollTop: $(document).height() - $(window).height()}, 300); // 속도를 300 밀리초로 설정
         });
 
-        let reviewData = {
-            reviewLocationNum: 0,
-            reviewCheckinNum: 0,
-            reviewCommunicationNum: 0,
-            reviewCleanlinessNum: 0,
-            reviewSatisfactionNum: 0,
-            reviewText: '',
-            contentId: '숙소번호',
-            reservId: ''
-        };
-
-        function setStarNum(starContainer, reviewKey) {
-            $(starContainer).find('.bi-star, .bi-star-fill').on('click', function () {
-                let index = $(this).index() + 1;
-                // 모든 별의 상태를 초기화
-                $(starContainer).find('.bi-star, .bi-star-fill').removeClass('bi-star-fill').addClass('bi-star');
-                // 클릭된 별까지 채우기
-                $(starContainer).find('.bi-star').slice(0, index).removeClass('bi-star').addClass('bi-star-fill');
-                reviewData[reviewKey] = index;
-            });
-        }
-
-        setStarNum('.location-stars', 'reviewLocationNum');
-        setStarNum('.checkin-stars', 'reviewCheckinNum');
-        setStarNum('.communication-stars', 'reviewCommunicationNum');
-        setStarNum('.cleanliness-stars', 'reviewCleanlinessNum');
-        setStarNum('.satisfaction-stars', 'reviewSatisfactionNum');
-
-        function isAllStarRatingProvided() {
-            return reviewData.reviewLocationNum > 0 &&
-                reviewData.reviewCheckinNum > 0 &&
-                reviewData.reviewCommunicationNum > 0 &&
-                reviewData.reviewCleanlinessNum > 0 &&
-                reviewData.reviewSatisfactionNum > 0;
-        }
-
-        // 폼 제출 이벤트 핸들러
-        $('form').on('submit', function () {
-            if (!isAllStarRatingProvided()) {
-                alert('모든 항목에 별점을 선택해주세요.');
-                event.preventDefault(); // 폼 제출 방지
-            }
-        });
     });
 </script>
 </body>
